--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -11,9 +11,14 @@
             margin-bottom: 30px;
 
             > ul {
+                display: none;
                 list-style: none;
                 margin: 0;
                 padding: 0;
+
+                &.active {
+                    display: block;
+                }
             }
         }
     }
