--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -1,11 +1,14 @@
 .ProfileConfigurePane {
+    background: @control-bg;
+    color: @control-color;
+    min-height: 100vh;
     padding: 20px 0;
 
     fieldset.Field {
         padding: 5px;
+        background: @body-bg;
         border-radius: @border-radius;
         .box-shadow(0 7px 15px @shadow-color);
-        background: @control-bg;
         legend {
             margin: 10px;
             width: 100%;
