not the best code, but it works, needs a refactoring

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -21,6 +21,14 @@
             list-style: none;
             margin: 0;
             padding: 0;
+            > li {
+                margin: 8px 0;
+                display: block;
+
+                > label {
+                    font-weight: bold;
+                }
+            }
         }
         &.new > ul, &.active > ul {
             display: block;
