allowing masquerade fields to show up on bio or replace it

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -44,3 +44,20 @@
         }
     }
 }
+
+
+.Masquerade-Bio {
+    .Masquerade-Bio-Set {
+        width: 100%;
+        .Masquerade-Bio-Field {
+            display: inline-block;
+            padding: .1em .2em;
+            font-weight: bold;
+            min-width: 30%;
+        }
+        .Masquerade-Bio-Answer {
+            display: inline-block;
+            width: 50%;
+        }
+    }
+}
