--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,27 +1,21 @@
 .ProfileConfigurePane {
     min-height: 100vh;
     padding: 20px 0;
-
     .Fields {
         margin: 10px 0;
-
         fieldset.Field {
+			max-width: 500px;
             margin: 0 5px;
             padding: 5px;
-
+			margin-bottom: 8px;
             legend {
                 margin: 10px 10px 0;
                 width: 100%;
-                > span {
-                    cursor: pointer;
-                }
             }
-
             .FormField {
                 .prefix {
                     float: left;
                     width: 30%;
-
                     display: block;
                     height: 36px;
                     padding: 8px 13px;
@@ -36,7 +30,6 @@
             }
         }
     }
-
     @media @desktop-up {
         .container {
             max-width: 600px;
@@ -44,20 +37,22 @@
         }
     }
 }
-
-
+.ProfileConfigurePane i, .Masquerade-Bio i {margin-right: 5px;}
 .Masquerade-Bio {
     .Masquerade-Bio-Set {
         width: 100%;
+		border-bottom: 3px solid @control-bg;
+		margin-bottom: 10px;
         .Masquerade-Bio-Field {
             display: inline-block;
             padding: .1em .2em;
             font-weight: bold;
             min-width: 30%;
+			vertical-align: top;
         }
         .Masquerade-Bio-Answer {
             display: inline-block;
-            width: 50%;
+            width: 70%;
         }
     }
 }
