Storing TextField data as XML, changed TextField CSS style

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -59,5 +59,9 @@
             display: inline-block;
             width: 50%;
         }
+        .Masquerade-Bio-Answer-Text {
+            display: block;
+            width: 100%;
+        }
     }
 }
