Update for Flarum beta 14

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -39,7 +39,7 @@
         }
     }
 
-    .Checkbox--switch .Checkbox-display {
+    .Checkbox--switch.off .Checkbox-display {
         background: #d8d8d8;
     }
 
