--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -1,13 +1,9 @@
 .ProfileConfigurePane {
-    background: @control-bg;
-    color: @control-color;
-    min-height: 100vh;
-    padding: 20px 0;
-
     fieldset.Field {
         padding: 5px;
         background: @body-bg;
         border-radius: @border-radius;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
         margin-top: 20px;
 
         legend {
