Make profile edit more intuitive. Fixes #60

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,38 +1,22 @@
 .ProfileConfigurePane {
-    min-height: 100vh;
-    padding: 20px 0;
-
     .Fields {
         margin: 10px 0;
 
-        fieldset.Field {
-            margin: 0 5px;
-            padding: 5px;
+        .FormField {
+            .prefix {
+                float: left;
+                width: 30%;
 
-            legend {
-                margin: 10px 10px 0;
-                width: 100%;
-                > span {
-                    cursor: pointer;
-                }
-            }
-
-            .FormField {
-                .prefix {
-                    float: left;
-                    width: 30%;
-
-                    display: block;
-                    height: 36px;
-                    padding: 8px 13px;
-                    font-size: 13px;
-                    line-height: 1.5;
-                    color: @muted-color;
-                    background-color: @control-bg;
-                    border: 2px solid transparent;
-                    border-radius: @border-radius;
-                    -webkit-appearance: none;
-                }
+                display: block;
+                height: 36px;
+                padding: 8px 13px;
+                font-size: 13px;
+                line-height: 1.5;
+                color: @muted-color;
+                background-color: @control-bg;
+                border: 2px solid transparent;
+                border-radius: @border-radius;
+                -webkit-appearance: none;
             }
         }
     }
@@ -49,15 +33,22 @@
 .Masquerade-Bio {
     .Masquerade-Bio-Set {
         width: 100%;
+
         .Masquerade-Bio-Field {
             display: inline-block;
             padding: .1em .2em;
             font-weight: bold;
             min-width: 30%;
         }
+
         .Masquerade-Bio-Answer {
             display: inline-block;
             width: 50%;
         }
     }
+}
+
+.Masquerade-NowCompleted {
+    display: inline-block;
+    margin-left: 20px;
 }
